--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,16 +1,12 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
 docusaurus:
   label: Docusaurus
   permalink: /docusaurus
-  description: Docusaurus tag description
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+  description: Docusaurus
+google-adsense:
+  label: Google Adsense
+  permalink: /google-adsense
+  description: Google Adsense
+google-analytics:
+  label: Google Analytics
+  permalink: /google-analytics
+  description: Google Adsense
