--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@docusaurus/module-type-aliases": "^3.5.1",
     "@docusaurus/tsconfig": "^3.5.1",
     "@docusaurus/types": "3.4.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9",
     "typescript": "~5.2.2",
     "wrangler": "^3.70.0"
   },
